[gd_scene load_steps=4 format=3 uid="uid://b674n40n8xjw2"]

[ext_resource type="LabelSettings" uid="uid://c4ui44j1luq80" path="res://menu_title.tres" id="1_el081"]
[ext_resource type="Script" path="res://pause.gd" id="1_x5xqy"]
[ext_resource type="LabelSettings" uid="uid://dkxuaxhqoe87v" path="res://menu_header.tres" id="2_k84k3"]

[node name="pause" type="Control"]
process_mode = 3
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_x5xqy")

[node name="VBoxContainer" type="VBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -20.0
offset_top = -20.0
offset_right = 20.0
offset_bottom = 20.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/separation = 10
alignment = 1

[node name="title" type="Label" parent="VBoxContainer"]
layout_mode = 2
text = "Paused"
label_settings = ExtResource("1_el081")

[node name="VBoxContainer" type="VBoxContainer" parent="VBoxContainer"]
layout_mode = 2

[node name="Label" type="Label" parent="VBoxContainer/VBoxContainer"]
layout_mode = 2
text = "Settings"
label_settings = ExtResource("2_k84k3")
horizontal_alignment = 1

[node name="Music" type="CheckButton" parent="VBoxContainer/VBoxContainer"]
layout_mode = 2
button_pressed = true
text = "Music"
icon_alignment = 2

[node name="SFX" type="CheckButton" parent="VBoxContainer/VBoxContainer"]
layout_mode = 2
button_pressed = true
text = "SFX"

[node name="MarginContainer" type="MarginContainer" parent="VBoxContainer/VBoxContainer"]
layout_mode = 2
theme_override_constants/margin_top = 30
theme_override_constants/margin_bottom = 20

[node name="Button" type="Button" parent="VBoxContainer/VBoxContainer/MarginContainer"]
layout_mode = 2
text = "Resume"

[node name="HBoxContainer" type="HBoxContainer" parent="VBoxContainer/VBoxContainer"]
layout_mode = 2

[node name="Quit to Menu" type="Button" parent="VBoxContainer/VBoxContainer/HBoxContainer"]
layout_mode = 2
text = "Main Menu"

[node name="Quit" type="Button" parent="VBoxContainer/VBoxContainer/HBoxContainer"]
layout_mode = 2
text = "Quit"

[connection signal="button_down" from="VBoxContainer/VBoxContainer/Music" to="." method="_on_music_button_down"]
[connection signal="button_down" from="VBoxContainer/VBoxContainer/SFX" to="." method="_on_sfx_button_down"]
[connection signal="button_down" from="VBoxContainer/VBoxContainer/MarginContainer/Button" to="." method="_on_button_button_down"]
[connection signal="button_down" from="VBoxContainer/VBoxContainer/HBoxContainer/Quit to Menu" to="." method="_on_quit_to_menu_button_down"]
[connection signal="button_down" from="VBoxContainer/VBoxContainer/HBoxContainer/Quit" to="." method="_on_quit_button_down"]
